// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea[Base] should render correctly  1`] = `
<div
  class="cf4qlmk soui-textarea-wrapper c-h8pgw4 soui-textarea-wrapper-focus"
  data-soui-input-border="true"
>
  <textarea
    class="c-cgqu3u soui-textarea-wrapper-padding-box cjw0ccp soui-textarea-wrapper-inner-title-bottom c-achhjj soui-textarea-textarea"
    placeholder="input something"
    rows="4"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about autosize 1`] = `
<div
  class="cf4qlmk soui-textarea-wrapper"
  data-soui-input-border="true"
>
  <textarea
    class="c-cgqu3u soui-textarea-wrapper-padding-box cjw0ccp soui-textarea-wrapper-inner-title-bottom c-achhjj soui-textarea-textarea"
    placeholder="Please enter content, the height can be automatically adjusted"
    rows="2"
    style="overflow: auto; max-height: 150px; height: 0px;"
  />
  <textarea
    class="c-cgqu3u soui-textarea-wrapper-padding-box cjw0ccp soui-textarea-wrapper-inner-title-bottom c-achhjj soui-textarea-textarea c-jw0h9l soui-textarea-shadow"
    placeholder="Please enter content, the height can be automatically adjusted"
    rows="2"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about footer 1`] = `
<div
  class="cf4qlmk soui-textarea-wrapper"
  data-soui-input-border="true"
>
  <textarea
    class="c-cgqu3u soui-textarea-wrapper-padding-box cjw0ccp soui-textarea-wrapper-inner-title-bottom c-achhjj soui-textarea-textarea"
    placeholder="input something"
    rows="3"
  />
  <div
    class="c-cgqu3u soui-textarea-wrapper-padding-box c-pxhqsu soui-textarea-footer"
  >
    <div
      style="text-align: right;"
    >
      <span>
        0
      </span>
       / 20
    </div>
  </div>
</div>
`;

exports[`Textarea[Base] should render correctly about info 1`] = `
<div
  class="cf4qlmk soui-textarea-wrapper"
  data-soui-input-border="true"
>
  <textarea
    class="c-cgqu3u soui-textarea-wrapper-padding-box cjw0ccp soui-textarea-wrapper-inner-title-bottom c-achhjj soui-textarea-textarea"
    placeholder="input something"
    rows="4"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about info by function 1`] = `
<div
  class="cf4qlmk soui-textarea-wrapper"
  data-soui-input-border="true"
>
  <textarea
    class="c-cgqu3u soui-textarea-wrapper-padding-box cjw0ccp soui-textarea-wrapper-inner-title-bottom c-achhjj soui-textarea-textarea"
    placeholder="input something"
    rows="4"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about size 1`] = `
<div>
  <div
    class="cf4qlmk soui-textarea-wrapper c-h1lgut soui-textarea-wrapper-small"
    data-soui-input-border="true"
    style="width: 120px; margin-inline-end: 24px;"
  >
    <textarea
      class="c-cgqu3u soui-textarea-wrapper-padding-box cjw0ccp soui-textarea-wrapper-inner-title-bottom c-achhjj soui-textarea-textarea"
      placeholder="small size"
      rows="3"
    />
  </div>
  <div
    class="cf4qlmk soui-textarea-wrapper"
    data-soui-input-border="true"
    style="width: 120px; margin-inline-end: 24px;"
  >
    <textarea
      class="c-cgqu3u soui-textarea-wrapper-padding-box cjw0ccp soui-textarea-wrapper-inner-title-bottom c-achhjj soui-textarea-textarea"
      placeholder="default size"
      rows="3"
    />
  </div>
  <div
    class="cf4qlmk soui-textarea-wrapper c-h5ncdd soui-textarea-wrapper-large"
    data-soui-input-border="true"
    style="width: 120px; margin-inline-end: 24px;"
  >
    <textarea
      class="c-cgqu3u soui-textarea-wrapper-padding-box cjw0ccp soui-textarea-wrapper-inner-title-bottom c-achhjj soui-textarea-textarea"
      placeholder="large size"
      rows="3"
    />
  </div>
</div>
`;
